--- a/2023-2024/html-css/site-perso/casque-vr/index/css/index.css
+++ b/2023-2024/html-css/site-perso/casque-vr/index/css/index.css
@@ -22,6 +22,7 @@ footer {
   background-color: #007acc; /* Couleur principale */
   color: #fff;
   opacity: 0.9; /* Transparence */
+  box-shadow: 10px 10px 10px #333;
 }
 
 /* Style de la barre de navigation */
